# chessengine

./: .gitignore  README.md  environment.ipynb  multienv.ipynb  pyproject.toml  train.py  visualize_trained.ipynb
.cursor/rules/: system-prompt.mdc
docs/plans/: 2026-02-28-rl-refactor-design.md  2026-02-28-rl-refactor-implementation-plan.md  2026-02-28-rl-refactor-migration-notes.md  2026-03-01-async-env-design.md  2026-03-01-async-env-implementation.md  2026-03-01-env-unification-design.md  2026-03-01-env-unification.md  2026-03-01-training-loop-refactor-design.md  2026-03-01-training-loop-refactor.md
roadmap/: 01_immediate_fixes.md  02_infrastructure.md  03_algorithm.md  04_rewards_curriculum.md  05_opponent_sampling.md  06_evaluation.md
scripts/: benchmark_sync_vs_async.py
src/: main.py
src/configs/: train_default.yaml
src/core/: interfaces.py  types.py
src/entrypoints/: train.py
src/environment/: async_vector_env.py  environment.py
src/envs/: open_spiel_async_vector_env.py  open_spiel_env.py  open_spiel_vector_env.py
src/losses/: composed_loss.py  entropy_regularization.py  policy_gradient.py  value_mse.py
src/model/: chess_model.py  returns.py  training.py
src/training/: metrics.py  rollout_collector.py  vector_buffer.py
src/utils/: utils.py
tests/: test_async_env.py
tests/core/: test_interfaces_contracts.py
tests/envs/: test_open_spiel_async_vector_env.py  test_open_spiel_env.py  test_open_spiel_vector_env.py
tests/integration/: test_training_smoke.py
tests/losses/: test_composed_loss.py
tests/model/: test_returns.py
(+1 files in other folders)
